--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,142 @@
-body{
-    background: slategray;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 16px;
+    font-family: 'Dosis', sans-serif;
+    background: url('../images/bg.jpg');
+    background-position: top;
+    background-size: cover;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+}
+
+.header {
+    background: black;
+    background: url("../images/berry-beverage-delicious-775033.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+
+.logo {
+    font-size: 1.3rem;
+    color: white;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0.7) 100%);
+    padding: 0.5em;
+    font-weight: bold;
+    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+}
+
+.logo__company {
+    margin-left: 1em;
+    font-size: 1rem;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.nav {
+    height: 8em;
+    padding: 10px 0;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.nav__list {
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-self: center;
+}
+
+.nav__list__item {
+    filter: grayscale(1) blur(1px);
+    -webkit-filter: grayscale(100%) blur(1px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 1.2rem;
+    transform: scale(1);
+    height: 6.5rem;
+    width: 6.5rem;
+    background: url("../images/smoothie.jpg");
+    background-size: 200%;
+    background-position-x: 55%;
+    background-position-y: 39%;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 9px #000000;
+    -webkit-box-shadow: 0px 0px 4px 5px rgba(87, 87, 87, 1);
+    -moz-box-shadow: 0px 0px 4px 5px rgba(87, 87, 87, 1);
+    box-shadow: 0px 0px 4px 5px rgba(87, 87, 87, 1);
+    -webkit-transition: transform 0.3s, filter 0.3s;
+    transition: transform 0.3s, filter 0.6s;
+}
+
+.nav__list__item--active {
+    transform: scale(1.3);
+    -webkit-box-shadow: 0px 0px 4px 5px gray;
+    -moz-box-shadow: 0px 0px 4px 5px gray;
+    box-shadow: 0px 0px 4px 5px gray;
+    filter: grayscale();
+    -webkit-filter: grayscale(0%);
+}
+
+.pages {
+    text-align: center;
+    padding: 50px 0;
+    position: relative;
+}
+
+.pages::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url("../images/antioxidant-4023745.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.home__box{
+    background: rgba(255, 255, 255, 0.438);
+    padding: 15px 0;
+    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+}
+.home__box__header{
+    font-size: 2.5rem;
+}
+.home__box__article{
+    padding: 20px;
+}
+.footer {
+    background: black;
+    color: white;
+    padding: 30px 10px;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0.7) 100%);
 }
