--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ html {
 }
 
 .nav__list__item {
-    filter: grayscale(1) blur(1px);
+    filter: grayscale(100%) blur(1px);
     -webkit-filter: grayscale(100%) blur(1px);
     display: flex;
     justify-content: center;
@@ -88,6 +88,11 @@ html {
     box-shadow: 0px 0px 4px 5px rgba(87, 87, 87, 1);
     -webkit-transition: transform 0.3s, filter 0.3s;
     transition: transform 0.3s, filter 0.6s;
+}
+
+.unblur{
+    filter: grayscale(0.6) blur(0px);
+    -webkit-filter: grayscale(60%) blur(0px)
 }
 
 .nav__list__item--active {
