--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 html {
     font-size: 16px;
     font-family: 'Dosis', sans-serif;
-    background: url('../images/bg.jpg');
+    background: url('../images/html-bg.jpg');
     background-position: top;
     background-size: cover;
 }
@@ -21,8 +21,10 @@ html {
 }
 
 .header {
+    position: relative;
+    z-index: 1;
     background: black;
-    background: url("../images/berry-beverage-delicious-775033.jpg");
+    background: url("../images/header-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
@@ -76,7 +78,7 @@ html {
     transform: scale(1);
     height: 6.5rem;
     width: 6.5rem;
-    background: url("../images/smoothie.jpg");
+    background: url("../images/nav-item-bg.jpg");
     background-size: 106%;
     background-position-x: 38%;
     background-position-y: 50%;
@@ -114,7 +116,7 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url("../images/half-home.jpg");
+    background-image: url("../images/home-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -127,6 +129,7 @@ html {
     padding: 15px 50px;
     width: 45%;
     font-size: 0.9rem;
+    color: white
 }
 
 .box--right{
@@ -136,23 +139,28 @@ html {
     text-align: right;
     margin-right: 0;
     margin-left: auto;
+    color: white;
 }
 
-.box__article {
-    border-radius: 30px;
-    color: rgb(255, 255, 255);
+.box--absolute{
+    padding: 15px 50px;
+    width:55%;
+    float: left;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 1000;
+    font-size: 1.4vw;
+    color: black
 }
 
 .box__header {
     display: inline-block;
     font-size: 2.5em;
-    color: rgb(255, 255, 255);
     letter-spacing: 4px;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid;
     padding-bottom: 15px;
 }
-
-
 .box__article__subheader {
     font-size: 1.8em;
     padding-top: 15px;
@@ -163,13 +171,18 @@ html {
     padding: 15px 0;
     line-height: 1.3em
 }
+.box__article__text--quote{
+    font-style: italic;
+    font-size: 1.3em;
+    padding: 15px 0;
+    line-height: 1.3em
+}
 
 .box__article__product-name {
     font-size: 2.5em;
     font-family: 'Carter One', cursive;
-    color: rgba(255, 255, 255, 0.685);
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
+    border-top: 2px solid;
+    border-bottom: 2px solid;
     padding: 10px 0;
 }
 
@@ -192,6 +205,51 @@ html {
     width: 100%;
     height: 100%;
     z-index: -1;
+}
+
+.healthy {
+    position: relative;
+    display: flex;
+    height: 60vh;
+}
+
+.healthy::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url("../images/pinneapples.jpg");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+
+.fit__img{
+    width: 100%;
+    display: block;
+    position: relative;
+}
+.fit__sign{
+    visibility: hidden;
+    font-family: 'Arizonia', cursive;
+    font-weight: bold;
+    font-size: 5.4vw;
+    white-space: pre-line;
+    text-align: center;
+    position: absolute;
+    right: 15%;
+    top: 45%;
+    transform: scale(10) rotate(0deg) ;
+    transition: transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.fit__sign--loaded{
+    visibility: visible;
+    transform: scale(1) rotate(300deg);
 }
 
 .footer {
