--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ html {
     font-family: 'Dosis', sans-serif;
     background: url('../images/html-bg.jpg');
     background-position: top;
-    background-size: cover;
+    background-size: auto;
 }
 
 .container {
@@ -106,6 +106,24 @@ html {
     -webkit-filter: grayscale(0%);
 }
 
+.page{
+    min-height: 38em;
+}
+.page__header{
+    color: white;
+    font-size: 2.2em;
+    padding-bottom: 10px;
+    border-bottom: 2px solid;
+}
+.page__text{
+    padding: 15px 0;
+    font-size: 1.5em;
+    color: white;
+}
+.pages{
+    font-size: 0.9rem;
+}
+
 .home {
     position: relative;
 }
@@ -128,14 +146,12 @@ html {
 .box--left {
     padding: 15px 50px;
     width: 45%;
-    font-size: 0.9rem;
-    color: white
+    color: white;
 }
 
 .box--right{
     padding: 15px 50px;
     width: 45%;
-    font-size: 0.9rem;
     text-align: right;
     margin-right: 0;
     margin-left: auto;
@@ -150,8 +166,8 @@ html {
     left: 0px;
     top: 0px;
     z-index: 1000;
-    font-size: 1.4vw;
-    color: black
+    font-size: 1.3vw;
+    color: black;
 }
 
 .box--center{
@@ -214,7 +230,6 @@ html {
 .healthy {
     position: relative;
     display: flex;
-    height: 60vh;
 }
 
 .healthy::after {
@@ -223,7 +238,7 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url("../images/pinneapples.jpg");
+    background-image: url("../images/be-healthy.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -231,8 +246,27 @@ html {
     height: 100%;
     z-index: -1;
 }
-
-
+.healthy__box__article__list{
+    list-style: none;
+    font-size: 1.3em;
+}
+.healthy__box__article__list__item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.healthy__box__article__list__item__icon{
+    display: flex;
+    justify-content: center;
+    font-size: 3em;
+    height: 1.2em;
+    width: 15%;
+    text-shadow: 0px 0px 12px rgba(0,0,0,0.8);
+}
+.healthy__box__article__list__item__text{
+    width: 80%;
+}
 .fit__img{
     width: 100%;
     display: block;
@@ -242,13 +276,13 @@ html {
     visibility: hidden;
     font-family: 'Arizonia', cursive;
     font-weight: bold;
-    font-size: 5.4vw;
+    font-size: 4.6vw;
     white-space: pre-line;
     text-align: center;
     position: absolute;
     right: 15%;
     top: 45%;
-    transform: scale(10) rotate(0deg) ;
+    transform: scale(3) rotate(0deg) ;
     transition: transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .fit__sign--loaded{
@@ -262,19 +296,8 @@ html {
     background: linear-gradient(to right, #29323c, #485563);
     text-align: center;
     padding: 15px 50px;
-    font-size: 1.1rem;
 }
-.query__header{
-    color: white;
-    font-size: 2.2em;
-    padding-bottom: 10px;
-    border-bottom: 2px solid;
-}
-.query__text{
-    padding: 15px 0;
-    font-size: 1.2em;
-    color: white;
-}
+
 .query__list{
     list-style: none;
     display: flex;
@@ -286,6 +309,7 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 1.2em;
     border-radius: 5px;
     padding: 10px;
     background: rgba(177, 177, 177, 0.733);
@@ -341,10 +365,91 @@ html {
     background: rgba(85, 107, 47, 0.808);
 }
 
+.newsletter{
+    background: #485563; 
+    background: -webkit-linear-gradient(to right, #29323c, #485563); 
+    background: linear-gradient(to right, #29323c, #485563);
+    color: white;
+    text-align: center;
+    padding: 15px 50px;
+}
+
+.newsletter__form{
+    font-size: 1.8em;
+    width: 60%;
+    margin: 0 auto;
+}
+
+.newsletter__form__fieldset{
+    padding: 15px;
+    background: #ffffff10;
+    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+}
+.newsletter__form__fieldset__input-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.newsletter__form__fieldset__input-box__input{
+    font-size: 1em;
+    padding: 5px;
+    margin-bottom: 15px;
+    border-radius: 3px;
+    border: none;
+    font-family: 'Dosis', sans-serif;
+    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+}
+.newsletter__form__fieldset__input-box__submit{
+    width: 50%;
+    align-self: center;
+    font-size: 1em;
+    font-family: 'Dosis', sans-serif;
+    font-weight: bold;
+    background: darkolivegreen;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 0.2em;
+    margin: 15px;
+    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+}
+.newsletter__form__fieldset__input-box__label{
+    align-self: flex-start;
+    margin-bottom: 10px;
+}
+
 .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
     background: black;
     color: white;
-    padding: 30px 10px;
+    padding: 30px 50px;
     background: rgb(0, 0, 0, 0.8);
-    /* background: linear-gradient(90deg, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0.7) 100%); */
+}
+.footer__section{
+    width: 30%;
+}
+
+.footer__section__list{
+    list-style: none;
+}
+.footer__section__list.social{
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+}
+.footer__section__list__item__link{
+    color: white;
+}
+.footer__section__list__item__img{
+    width: 3em;
+    cursor: pointer;
 }
